c/examples/writing-a-c-compiler-tests/tests/chapter_5/valid/use_assignment_result.c
int main(void) {

    int a = 1;
    int b = 2;
    return a = b = 4;
}
