c/examples/writing-a-c-compiler-tests/tests/chapter_5/invalid_parse/missing_semicolon.c
int main(void) {
    int a = 2
    a = a + 4;
    return a;
}